Changes for OSX plus fixes for compiler warnings